@@ -1,13 +1,15 @@
 package no.nav.melosys.domain.arkiv;
 
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.List;
 
+import no.nav.melosys.domain.behandlingsgrunnlag.Behandlingsgrunnlag;
 import no.nav.melosys.domain.eessi.SedType;
 import no.nav.melosys.domain.msm.AltinnDokument;
 
-import static no.nav.melosys.domain.arkiv.DokumentVariant.lagArkivVariant;
+import static no.nav.melosys.domain.arkiv.DokumentVariant.lagDokumentVariant;
 
 public class FysiskDokument extends ArkivDokument {
     private static final String DOKUMENT_KATEGORI_SED = "SED";
@@ -23,7 +25,24 @@ public class FysiskDokument extends ArkivDokument {
         fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SED);
         fysiskDokument.setTittel(hentTittelForSedType(sedType));
         fysiskDokument.setBrevkode(sedType.name());
-        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagArkivVariant(sedPdf)));
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(sedPdf)));
+        return fysiskDokument;
+    }
+
+    static FysiskDokument lagFysiskHovedDokumentAltinn(AltinnDokument altinnDokument,
+                                                  Behandlingsgrunnlag behandlingsgrunnlag) {
+        FysiskDokument fysiskDokument = new FysiskDokument();
+        fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SOKNAD);
+        fysiskDokument.setTittel(hentTittelForAltinnDokument(altinnDokument.getDokumentType()));
+        byte[] innhold = Base64.getDecoder().decode(altinnDokument.getInnhold());
+        var dokumentVarianter = List.of(
+            lagDokumentVariant(innhold),
+            lagDokumentVariant(
+                behandlingsgrunnlag.getOriginalData().getBytes(StandardCharsets.UTF_8),
+                DokumentVariant.VariantFormat.ORIGINAL
+            )
+        );
+        fysiskDokument.setDokumentVarianter(dokumentVarianter);
         return fysiskDokument;
     }
 
@@ -32,7 +51,7 @@ public class FysiskDokument extends ArkivDokument {
         fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_SOKNAD);
         fysiskDokument.setTittel(hentTittelForAltinnDokument(altinnDokument.getDokumentType()));
         byte[] innhold = Base64.getDecoder().decode(altinnDokument.getInnhold());
-        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagArkivVariant(innhold)));
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(innhold)));
         return fysiskDokument;
     }
 
@@ -40,7 +59,7 @@ public class FysiskDokument extends ArkivDokument {
         FysiskDokument fysiskDokument = new FysiskDokument();
         fysiskDokument.setDokumentKategori(DOKUMENT_KATEGORI_INFOBREV);
         fysiskDokument.setTittel(tittel);
-        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagArkivVariant(pdf)));
+        fysiskDokument.setDokumentVarianter(Collections.singletonList(lagDokumentVariant(pdf)));
         return fysiskDokument;
     }
 
